kubernetes/efwgateway/efwgateway-postgresql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: efwgateway-postgresql
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: efwgateway-postgresql
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: postgres
        image: postgres:10.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/
---
apiVersion: v1
kind: Service
metadata:
  name: efwgateway-postgresql
  namespace: default
spec:
  selector:
    app: efwgateway-postgresql
  ports:
  - port: 5432
