kubernetes/efwgateway/efwgateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: efwgateway
  namespace: default
  labels:
    app: efwgateway
spec:
  selector:
    app: efwgateway
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
