kubernetes/efwgateway/efwgateway-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: efwgateway-virtualservice
  namespace: default
spec:
  hosts:
    - efwgateway
  http:
    - route:
        - destination:
            host: efwgateway
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
